# Python-for-Data-Science

./: readme.md
0 - Starting/ex00/: Hello.py
0 - Starting/ex01/: format_ft_time.py
0 - Starting/ex02/: find_ft_type.py
0 - Starting/ex03/: NULL_not_found.py
0 - Starting/ex04/: whatis.py
0 - Starting/ex05/: building.py
0 - Starting/ex06/: filterstring.py  ft_filter.py
0 - Starting/ex07/: sos.py
0 - Starting/ex08/: Loading.py
0 - Starting/ex09/: LICENSE  README.md  pyproject.toml  test.py
0 - Starting/ex09/ft_package/: __init__.py  analysis.py
0 - Starting/ex09/ft_package.egg-info/: PKG-INFO  SOURCES.txt
1 - Array/ex00/: give_bmi.py
1 - Array/ex01/: array2D.py
1 - Array/ex02/: i6ol729h_400x400.jpg:Zone.Identifier  load_image.py
1 - Array/ex03/: zoom.py
